--- a/style.css
+++ b/style.css
@@ -1,11 +1,49 @@
+body{
+    margin: 0px;
+}
+.top-container{
+    position: fixed;
+    top:0px;
+    width: 100%;
+    height: 60px;
+    color: #fff;
+    background-color: green;
+    display: flex;
+    justify-content: space-between;
+}
+.logo{
+    display: flex;
+    margin-left: 20px;
+
+}
+.logo-img{
+    height: 40px;
+    width: 40px;
+    margin: auto;
+}
+.logo-piedpiper{
+    text-decoration: none;
+    color: #FFF;
+    margin-left: 10px;
+    font-size: 20px;
+}
 .menu-bar{
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    background-color: #20A864;
-}
-
-ul > li{
-    display: inline-block;
-}
+    align-items: center;
+    list-style: none;
+    margin-right: 20px; 
     
+}
+.top-piedpiper{
+    font-size: 20px;
+    margin-left: 10px;
+
+}
+.menu-bar-word{
+    text-decoration: none;
+    color: #FFF;
+    margin-left :20px;
+}
+.main-container{
+   margin-top: 100px;
+}
