--- a/style.css
+++ b/style.css
@@ -1,11 +1,75 @@
-.menu-bar{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    background-color: #20A864;
+body {
+    color: #fff;
+    margin: 0;
 }
 
-ul > li{
-    display: inline-block;
+.hd-main {
+background: green; 
+
 }
+
+.hd-main_left {
+float: left;
+}
+
+.hd-main_menu_item {
+    position: relative;
+    display: inline-block;
+    margin: 3px;
+    height: 42px;
+    vertical-align: middle;
+    font-size: 12px;
+}
+
+.hd-logo {
+    display: table-cell;
+    padding:0 0 0 12px;
+    height: 42px;
+    vertical-align: middle;
+}
+
+.hd-main_right{
+    text-align: right;
+    min-width: 70%;
+}
+
+.hd-main_submenu {
+    display: inline-block;
+    list-style: none;
+    text-align: right;
+}
+.hd-main_submenu_item{
+    position: relative;
+    display: inline-block;
+    margin: 3px;
+    height: 42px;
+    vertical-align: middle;
+    font-size: 12px;
+}
+
+.top-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(90deg,hsl(251, 60%, 47%) 0%,#a8c0ff 100%);
+    height: 100vh;
     
+}
+
+.about {
+
+    background-color: black;
+    height: 100vh;
+}
+
+.activity {
+
+    background: linear-gradient(to bottom, #348f50, #56b4d3);
+    height: 100vh;
+}
+
+.join-us {
+
+    background: linear-gradient(90deg,hsl(251, 60%, 47%) 0%,#a8c0ff 100%);
+    height: 100vh;
+}
