--- a/style.css
+++ b/style.css
@@ -1,11 +1,96 @@
-.menu-bar{
+body{
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  .header{
+    background-color: rgb(0, 104, 55);
+    border-bottom: 1px solid black;
+    /* ヘッダー内、要素の横並び */
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
-    background-color: #20A864;
-}
-
-ul > li{
+    /* justify-content: center; */
+    align-items: center;
+    /* ポジションの基準化 */
+    position: relative;
+    /* ヘッダー固定化 */
+    position: fixed;
+    width: 100%;
+    height: 60px;
+    /* 上の空白問題解消 */
+    top: 0;
+    left: 0;
+  }
+  .header__title {
+    /* vertical-align: middle; */
+    padding-left: 20px;
+    position: absolute;
+    top: 12px;
+  }
+  /* .header h1:before{
+    content:url(assets/piedpiper.jpg);
+  } */
+  /* .header__title, .header__menu{
     display: inline-block;
-}
-    
+  } */
+  .header__menu{
+    position: absolute;
+    right: 0.5%;
+    display: flex;
+    flex-direction: row;
+  }
+  .header__menu ul{
+    /* liの横並び */
+    display: flex;
+    /* position: absolute; */
+  }
+  .header__menu li{
+    margin-right: 30px;
+    list-style: none;
+  }
+  .header__menu a{
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+  }
+  #input{
+    display: none;
+  }
+  .line{
+    width: 40px;
+    height: 2px;
+    background-color: white;
+    margin: 6px;
+  }
+  @media screen and (max-width:768px){
+    .header__menu__pc{display: none;}
+  }
+  
+  /* ーーーーーここからMAINーーーーー */
+  /* ーーーーーここからMAINーーーーー */
+  
+  
+  .section{
+    margin-top: 60px;
+    /* margin-left: 0px; */
+  
+  }
+  .section__top{
+    background-image: url(assets/pptop.png);
+    background-size: cover;
+    height: 800px;
+    width: 100%   
+    /* margin-left: 0px; */
+  }
+  .section__about{
+    background-image: url(assets/aboutwall.png);
+    background-size: cover;
+    height: 1000px;
+    max-width: 100%;
+  }
+  
+  /* .header__menu li{
+    display: inline-block;
+  } */
+  /* ul > li{
+    /* display: inline-block; */ 
+  
