--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 body{
     margin-left: 0px;
     margin-right: 0px;
+    margin-bottom: 0px;
   }
-  .header{
-    background-color: rgb(0, 104, 55);
-    border-bottom: 1px solid black;
+  header{
+    background: #159957;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #159957, #155799);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #159957, #155799); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    border-bottom: 0px solid black;
     /* ヘッダー内、要素の横並び */
     display: flex;
     flex-direction: row;
@@ -67,27 +70,152 @@ body{
   
   /* ーーーーーここからMAINーーーーー */
   /* ーーーーーここからMAINーーーーー */
+  /* ーーーーーここからMAINーーーーー */
+  /* ーーーーーここからMAINーーーーー */
+  /* ーーーーーここからMAINーーーーー */
   
-  
-  .section{
-    margin-top: 60px;
-    /* margin-left: 0px; */
-  
+  main{
+    margin-top: 90px;
   }
+  
   .section__top{
-    background-image: url(assets/pptop.png);
-    background-size: cover;
-    height: 800px;
-    width: 100%   
+    background: #159957;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #159957, #155799);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #159957, #155799); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    /* background-image: url(assets/pptop.png); */
+    /* background-size: cover; */
+    height:400px;
+    padding-top: 10%;
+    padding-bottom: 10%;
+    /* width: 100%; */
+    /* margin: 0 auto; */
     /* margin-left: 0px; */
   }
+  .section__top__logo{
+    text-align: center;
+  }
+  .section__top__text{
+    text-align: center;
+    color: white;
+  }
+
+
+
   .section__about{
-    background-image: url(assets/aboutwall.png);
+    background-color: #424242;
+    /* background-image: url(assets/aboutwall.png); */
     background-size: cover;
-    height: 1000px;
-    max-width: 100%;
+    height: 400px;
+    /* max-width: 100%; */
+  }
+  .section__about__text{
+    text-align: center;
+    color: white;
+  }
+  .section__activity{
+    /* background-color: #00796b; */
+    background: #159957;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #155799, #159957);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #155799, #159957); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    height: 400px;
+    color: white;
+    text-align: center;
+  }
+  .section__joinus{
+    background-color: #e0e0e0;
+    text-align: center;
+    display: flex;  
+    height: 400px;
+  }
+  .section__joinus__message{
+    background-color: #00796b;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5%;
+    margin-bottom: 20%;
+    font-size: 20%;
+    color: white;
+    text-align: left;
+    width: 30%;
+    height: 80%;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  .section__joinus__aoyama{
+    background-color: #00796b;
+    margin-left: auto;
+    margin-right: auto;
+    color: white;
+    height: 40%;
+    width: 20%;
+    margin-top: 10%;
+  }
+  .section__joinus__sagamihara{
+    background-color: #00796b;
+    margin-left: auto;
+    margin-right: auto;
+    color: white;
+    height: 40%;
+    width: 20%;
+    margin-top: 20%;
   }
   
+  .section__contact{
+    /* background-color: #00796b; */
+    background: #000000;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0f9b0f, #00796b);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0f9b0f, #00796b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    color: white;
+    text-align: center;
+    display: flex;
+    height: 400px;
+  }
+ .section__contact__list{
+   margin-right: auto;
+   margin-left: auto;
+   text-align: left;
+ }
+ .section__contact__list a{
+   text-decoration: none;
+   color: white;
+ }
+ .section__contact__form{
+   margin-top: 10%;
+   margin-right: auto;
+   margin-left: auto;
+   text-align: left;
+   text-align: center;
+   /* height: 400px; */
+ }
+ .button {
+  display       : inline-block;
+  border-radius : 5%;          /* 角丸       */
+  font-size     : 10pt;        /* 文字サイズ */
+  text-align    : center;      /* 文字位置   */
+  cursor        : pointer;     /* カーソル   */
+  padding       : 6px 6px;   /* 余白       */
+  background    : #159957;     /* 背景色     */
+  color         : #ffffff;     /* 文字色     */
+  line-height   : 1em;         /* 1行の高さ  */
+  transition    : .3s;         /* なめらか変化 */
+  box-shadow    : 3px 3px 7px #666666;  /* 影の設定 */
+  border        : 2px solid #159957;    /* 枠の指定 */
+}
+.button:hover {
+  box-shadow    : none;        /* カーソル時の影消去 */
+  color         : #159957;     /* 背景色     */
+  background    : #ffffff;     /* 文字色     */
+}
+  /* .section__contact__list .section__contact__form{
+    display: inline-block;
+  } */
+  footer{
+    background-color: #212121;
+    height: 70px;
+    color: white;
+  }
   /* .header__menu li{
     display: inline-block;
   } */
