--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html{
+  scroll-behavior: smooth;
+}
 body{
     margin-left: 0%;
     margin-right: 0%;
@@ -35,9 +38,8 @@ body{
     top: 50%;
     left: 20%;
     transform: translateY(-50%) translateX(-50%);
-    -webkit- transform: translateY(-50%) translateX(-50%);
-    
-  }
+    /* -webkit- transform: translateY(-50%) translateX(-50%); */
+   }
  
   .header__menu{
     position: absolute;
@@ -132,12 +134,12 @@ body{
     background: #159957;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #155799, #159957);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #155799, #159957); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    height: 60%;
+    height: 30%;
     width: 100%;
     color: white;
     text-align: center;
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
   .section__activity__articles{
     
@@ -146,14 +148,20 @@ body{
   .section__activity__articles__each{
     display: inline-block;
    
-    border-style: solid;
-    width: 210px;
-    height: 150px;
-    margin-bottom: 5%;
-    margin-left: 5%;
-    margin-right: 5%;
-
+    width: 300px;
+    height: 280px;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+    
+    
   }
+  iframe  {
+    width: 300px;
+    height: 280px;
+  
+    }
   .section__joinus{
     background-color: #e0e0e0;
     text-align: center;
