--- a/style.css
+++ b/style.css
@@ -1,93 +1,178 @@
+@charset "UTF-8";
+/*　　　共通部分
+ーーーーーーーーーーーーーーーーーーーーーーーーーーーーー*/
+html {
+    scroll-behavior: smooth;
+}
+
 body {
-    color: #fff;
-    margin: 0px;
+    font-family: "Yu Gothic Medium", "遊ゴシック Medium", YuGothic,"遊ゴシック体","ヒラギノ角ゴ Pro W3" sans-serif;
+    margin: 0;
+    line-height: 1.7;
+    color: black;
 }
 
-.container {
-    overflow: auto;
-    scroll-snap-type: y;
-    height: 100vh;
-    margin: 0px;
-
+a {
+    text-decoration: none;
+    color: #ffffff;
 }
 
-.area {
-    scroll-snap-align: start;
-    height: 100vh;
-    margin: 0px;
-    padding: 0px;
+p,
+h1,
+h2,
+h5
+{
+    text-align: center;
+    color: #ffffff;
+    margin: 0;
 }
 
-.hd-main {
-background: green; 
-margin: 0px;
+@media screen and (max-width:767px){
+    .header_menu_pc{display: none;}
+  }
+/*　　　header
+ーーーーーーーーーーーーーーーーーーーーーーーーーーーーー*/
+header {
+    /* background: #159957;  fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #159957, #155799);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #159957, #155799); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.logo {
+    width: 100px;
+    margin-top: 14px;
 }
 
-.hd-main_left {
-float: left;
-margin: 0px;
+hd-logo > h1 {
+    font-size: 160%;
 }
 
-.hd-main_menu_item {
-    position: relative;
-    display: inline-block;
-    margin: 3px;
-    height: 42px;
-    vertical-align: middle;
-    font-size: 12px;
-}
-
-.hd-logo {
-    display: table-cell;
-    padding:0 0 0 12px;
-    height: 42px;
-    vertical-align: middle;
-}
-
-.hd-main_right{
-    text-align: right;
-    min-width: 70%;
-    margin: 0px;
-}
-
-.hd-main_submenu {
-    display: inline-block;
-    list-style: none;
-    text-align: right;
-    margin: 0px;
-}
-.hd-main_submenu_item{
-    position: relative;
-    display: inline-block;
-    margin: 3px;
-    height: 42px;
-    vertical-align: middle;
-    font-size: 12px;
-}
-
-.top-logo {
+.main-nav {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(90deg,hsl(251, 60%, 47%) 0%,#a8c0ff 100%);
-    height: 100vh;
-    margin: 0px;
+    font-size: 1.25rem;
+    text-transform: uppercase;
+    margin-top: 34px;
+    list-style-type: none;
 }
 
-.about {
-    background-color: black;
-    height: 100vh;
-    margin: 0px;
+.main-nav li {
+    margin-left: 36px;
 }
 
-.activity {
-    background: linear-gradient(to bottom, #348f50, #56b4d3);
-    height: 100vh;
-    margin: 0px;
+.main-nav a {
+    color: #fff;
 }
 
-.join-us {
-    background: linear-gradient(90deg,hsl(251, 60%, 47%) 0%,#a8c0ff 100%);
+.main-nav a:hover {
+    color: #00bbdd;
+}
+
+.page-header {
+    display: flex;
+    justify-content: space-between;
+    
+}
+/*　　　button
+ーーーーーーーーーーーーーーーーーーーーーーーーーーーーー*/
+.button {
+    display       : inline-block;
+    border-radius : 5%;          /* 角丸       */
+    font-size     : 10pt;        /* 文字サイズ */
+    text-align    : center;      /* 文字位置   */
+    cursor        : pointer;     /* カーソル   */
+    padding       : 6px 6px;   /* 余白       */
+    background    : #159957;     /* 背景色     */
+    color         : #ffffff;     /* 文字色     */
+    line-height   : 1em;         /* 1行の高さ  */
+    transition    : .3s;         /* なめらか変化 */
+    box-shadow    : 3px 3px 7px #666666;  /* 影の設定 */
+    border        : 2px solid #159957;    /* 枠の指定 */
+  }
+  .button:hover {
+    box-shadow    : none;        /* カーソル時の影消去 */
+    color         : #159957;     /* 背景色     */
+    background    : #ffffff;     /* 文字色     */
+  }
+
+/*　　　footer
+ーーーーーーーーーーーーーーーーーーーーーーーーーーーーー*/
+footer {
+    background-color: #212121;
+    text-align: center;
+    padding-top: 20px;
+    
+    color: white;
+  }
+/*　　　Top
+ーーーーーーーーーーーーーーーーーーーーーーーーーーーーー*/
+#top {
+    background: #159957;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #159957, #155799);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #159957, #155799); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */;
     height: 100vh;
-    margin: 0px;
+}
+
+.section__top__logo{
+    text-align: center;
+  }
+/*　　　About
+ーーーーーーーーーーーーーーーーーーーーーーーーーーーーー*/
+#about {
+    background-color: #424242;
+    height:100vh;
+    display: block;
+    
+    
+}
+.about__title {
+    padding-top: 10%;
+    padding-right: 25%;
+    font-size: 5rem;
+}
+.about__text {
+    padding-top: 3%;
+    padding-right: 23%;
+    font-size: 1.5rem;
+}
+
+/*　　　Activity
+ーーーーーーーーーーーーーーーーーーーーーーーーーーーーー*/
+#activity {
+    background: #159971;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #15997c, #249915);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #14ccad, #159936); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    height: 100vh;
+}
+.activity__title {
+    font-size: 4rem;
+    padding-top: 2%;
+    
+}
+.act__title__span {
+    border-bottom: solid;
+}
+/*　　　Join Us
+ーーーーーーーーーーーーーーーーーーーーーーーーーーーーー*/
+#joinus {
+    background-color:white;
+    height:100vh;
+    display: flex;
+}
+.section__joinus__message {
+    background-color:greenyellow;
+}
+.section__joinus__aoyama {
+    background-color:greenyellow;
+}
+.section__joinus__sagamihara {
+    background-color:greenyellow;
+}
+/*　　　Contact
+ーーーーーーーーーーーーーーーーーーーーーーーーーーーーー*/
+#contact {
+    /* background-color: #00796b; */
+    background: #000000;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0f9b0f, #00796b);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0f9b0f, #00796b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    
 }
