--- a/templates/index.html
+++ b/templates/index.html
@@ -1,136 +1,142 @@
-  <!DOCTYPE html>
-<html>
-  <head>
-    <title>青学PiedPiperプログラミング</title>
-    <meta http-equiv="content-type" content="text/html" charset="UTF-8">
-    <meta http-equiv="content-language" content="ja">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="style.css" >
-  </head>
+{% extends "base.html" %}
+{% block content %}
 
 
-  <body>
-    <header class="page-header">
-      <!-- ヘッダーのタイトル（indexとの結び付） -->
-      <a href="index.html" class="header_title">PiedPipe<img class="logo" src="#" alt="PiedPiper" ></a>
-      <!-- ヘッダーのメニューバー --> 
-      <nav>
-        <ul class="main-nav">
-            <li><a href="#top">Top</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href ="#activity">Activity</a></li>
-            <li><a href="#joinus">Join Us</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>  
-     
-    </header>
-    <!-- ここまでがヘッダー -->
+<!-- セクション1 TOP-->
 
-    <main>
-      <!-- セクション1 TOP-->
-      <div  id="top" class="section__top">
-        <!-- セクション1 TOPのロゴ -->
-        <div class="section__top__logo">
-          <img src="assets/circle__logo1.png" alt="" height="" width="30%">
+<div id="top" class="section__top section">
+  <!-- セクション1 TOPのロゴ -->
+  <div class="top-container">
+    <div class="section__top__logo">
+      <img src="/static/images/logo_w.png" alt="logo" width="30%">
+    </div>
+    <!-- TOPの文章 -->
+    <div class="section__top__text">
+      <p class="h1 display-3 mt-4 mb-3 top_logo_text">PiedPiper</p>
+      <p class="h5">Aoyama Gakuin University</p>
+      <p class="h5">Programming Society</p>
+    </div>
+  </div>
+
+</div>
+
+<!-- セクション2-ABOUT_PIEDPIPER -->
+<div id="about" class="section__about section">
+  <!-- ABOUTの文章 -->
+  <h1 class="display-1">PiedPiper</h1>
+  <div class="about__text">
+    <p>青山学院大学プログラミング愛好会です。</p>
+    <p>青学生のテクノロジーへの理解を深め</p>
+    <p>プログラミングの学習及び開発を行っています。</p>
+  </div>
+
+</div>
+
+
+<!-- セクション3 -ACTIVITY-->
+<div id="activity" class="section__activity section">
+  <h1 class="sub-heading">ACTIVIY</h1>
+  <div class="note__api">
+    <div class="row justify-content-center p-5">
+      {% for note in note_list %}
+      <div class="col-xl-3 col-4  px-3">
+        <div class="card mb-4 ">
+          <a href="note/{{note['id']}}" class="note-card">
+            <img class="card-img-top" src="{{note['eyecatch']}}" alt="カードの画像">
+            <div class="card-body p-4">
+              <h5 class="card-title">{{note['name']}}<br><span
+                  class="small text-muted">{{note['publish_at'][0:10]}}</span></h5>
+              <p class="card-text">{{note.body | truncate(100)}}</p>
+              <!-- <br> -->
+            </div>
+          </a>
         </div>
-        <!-- TOPの文章 -->
-        <div class="section__top__text">
-          <h1>PiedPiper</h1>
-          <p>Aoyama Gakuin University</p>
-          <p>Programming Society</p>
-        </div>
 
-        
       </div>
+      {% endfor %}
 
-      <!-- セクション2-ABOUT_PIEDPIPER -->
-      <div id="about" class="section__about">
-        <!-- ABOUTの文章 -->
-          <div class="about__title">
-            <h2>PiedPiper</h2>
-          </div>
-          <div class="about__text">
-            <p>青山学院大学プログラミング愛好会です。</p>
-            <p>青学生のテクノロジーへの理解を深め</p>
-            <p>プログラミングの学習及び開発を行っています。</p>
-          </div>  
-        
-      </div>
-
-
-      <!-- セクション3 -ACTIVITY-->
-      <div id="activity" class="section__activity">
-        <h1 class="activity__title">AC<span class="act__title__span">TIVI</span>TY</h1>
-        <div class="note__api">
-        </div>
-        <a href="#" class="button read_more"><!--ここにノートのURLをリンクする-->
-          　　　　MORE  　　　　⇨
-        </a>
-      </div>
-
-
-      <!-- セクション4 -JOIN_US-->
-      <div id="joinus" class="section__joinus">
-        <div class="section__joinus__message">
-          <h1>JOIN US</h1>
-          <p>PiedPiperは</p>
-          <p>初心者歓迎のサークルです</p>
-          <p>エンジニア志望の方は勿論、</p>
-          <p>起業・教育関係のお仕事を目指す方</p>
-          <p>ものづくりが好きな方</p>
-          <p>新しい時代を感じたい方</p>
-          <p>是非一度ご連絡ください</p>
-          <p>お待ちしています。</p>
-        </div>
-        <div class="section__joinus__aoyama">
-          <h5>Aoyama Campus</h5>
-          <p>Every Friday</p>
-          <p>18:30~21:00
-        </div>
-        <div class="section__joinus__sagamihara">
-          <h5>Sagamihara Camups</h5>
-          <p> Every Monday</p>
-          <p>18:00~21:00</p>
-          </div>
-      </div>
-
-
-
-      <!-- セクション5-CONTACT -->
-      <div id="contact" class="section__contact">
-      
-        <div class="section__contact__list">
-          <h2>PiedPiper</h2>
-          <p>Aoyama Gakuin University</p> 
-          <p>Programming Society</p>
-          <p>piedpiper.aoyama@gmail.com</p>
-          <p><a href="https://twitter.com/PiedPiper_AGU">Twitter</a></p>
-          <p><a href="https://note.com/piedpiper_aoyama/n/ne40b6a301258">Note</a></p>
-          <p><a href="#">Instagram</a></p>
-          <p><a href="#">Facebook</a></p>
-        </div>
-
-
-
-        <div class="section__contact__form">
-          <form action="malto: piedpiper.aoyama@gmail.com" method="post" enctype="text/plain">
-            <input type="text" size="32" name="name" placeholder="Your Name"><br>
-            <input type="text" size="32" name="email" placeholder="Email Address"><br>
-            <textarea name="comment" id="contact" cols="30" rows="10" placeholder="Message"></textarea><br>
-            <input type="submit" value="SEND" class="button">
-          </form>
-        </div>
-      </div>
-
-     </main>
+    </div>
+    <div class="button_wrapper">
+      <a href="/note" class="more-button">More</a>
     </div>
 
-      <footer>
-        <p><small>&copy;2020青山学院大学PiedPiperプログラミング愛好会</small></p>
-        <!-- Noteへ -->
-        <!-- ツイッターへ -->
-      </footer>
+  </div>
 
-  </body>
-</html>
+</div>
+
+
+<!-- セクション4 -JOIN_US-->
+<div id="joinus" class="section__joinus section">
+  <div class="section__joinus__message">
+    <h1>JOIN US</h1>
+    <p>PiedPiperは</p>
+    <p>初心者歓迎のサークルです</p>
+    <p>エンジニア志望の方は勿論、</p>
+    <p>起業・教育関係のお仕事を目指す方</p>
+    <p>ものづくりが好きな方</p>
+    <p>新しい時代を感じたい方</p>
+    <p>是非一度ご連絡ください</p>
+    <p>お待ちしています。</p>
+  </div>
+  <div class="section__joinus__aoyama">
+    <h5>Aoyama Campus</h5>
+    <p>Every Friday</p>
+    <p>18:30~21:00
+  </div>
+  <div class="section__joinus__sagamihara">
+    <h5>Sagamihara Camups</h5>
+    <p> Every Monday</p>
+    <p>18:00~21:00</p>
+  </div>
+</div>
+
+
+
+<!-- セクション5-CONTACT -->
+<div id="contact" class="section__contact section">
+  <h1 class="sub-heading">CONTACT</h1>
+
+  <div class="row justify-content-center contact-body">
+    <div class="t col-3 text-left ">
+      <h2>PiedPiper</h2>
+      <p>Aoyama Gakuin University<br>
+        Programming Society</p>
+      <p>piedpiper.aoyama@gmail.com</p>
+      <p><a href="https://twitter.com/PiedPiper_AGU">Twitter</a></p>
+      <p><a href="https://note.com/piedpiper_aoyama/n/ne40b6a301258">Note</a></p>
+      <p><a href="#">Instagram</a></p>
+      <p><a href="#">Facebook</a></p>
+    </div>
+
+
+
+    <div class="section__contact__form col-3 offset-2">
+      <form action="malto: piedpiper.aoyama@gmail.com" method="post" enctype="text/plain">
+        <div class="form-group">
+          <input class="form-control" type="text" size="32" name="name" placeholder="Your Name">
+        </div>
+        <div class="form-group">
+          <input class="form-control" type="email" size="32" name="email" placeholder="Email Address">
+        </div>
+        <div class="form-group">
+          <textarea class="form-control" name="comment" rows="7" placeholder="Message"></textarea>
+        </div>
+        <div class="button_wrapper">
+          <input type="submit" value="SEND" class="button">
+        </div>
+
+      </form>
+    </div>
+  </div>
+
+</div>
+
+
+
+
+<footer>
+  <p><small>&copy;2020青山学院大学PiedPiperプログラミング愛好会</small></p>
+  <!-- Noteへ -->
+  <!-- ツイッターへ -->
+</footer>
+{% endblock %}
