--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header class="navbar navbar-expand-sm sticky-top">
+    <header class="navbar navbar-expand-sm fixed-top">
         <!-- ヘッダーのタイトル（indexとの結び付） -->
         <a href="/" class="navbar-brand"><img class="d-inline-block align-top logo-img"
                 src="/static/images/PiedPiper_logo_w.png" alt="PiedPiper"></a>
