--- a/templates/note_body.html
+++ b/templates/note_body.html
@@ -4,11 +4,11 @@
 <div class="note-conteiner">
     <h1 class="text-center">Note of PiedPiper</h1>
     <div class="row justify-content-center">
-        <div class="note-content col-6">
+        <div class="note-content col-5">
             <div class="note-title">
                 <img src="{{eyecatch}}" alt="">
                 <h1>{{ name }}<br>
-                    <span class="small text-muted">{{publish_at[0:10]}}</span></h1>
+                    <span class="small text-muted">{{publishAt[0:10]}}</span></h1>
             </div>
 
             <div class="note-body">
