--- a/templates/index.html
+++ b/templates/index.html
@@ -49,11 +49,11 @@
       {% for note in note_list %}
       <div class="col-xl-3 col-4  px-3">
         <div class="card mb-4 ">
-          <a href="note/{{note['id']}}" class="note-card">
+          <a href="note/{{note['key']}}" class="note-card">
             <img class="card-img-top " src="{{note['eyecatch']}}" alt="カードの画像">
             <div class="card-body p-4">
               <h5 class="card-title">{{note['name']}}<br><span
-                  class="small text-muted">{{note['publish_at'][0:10]}}</span></h5>
+                  class="small text-muted">{{note['publishAt'][0:10]}}</span></h5>
               <p class="card-text">{{note.body | truncate(100)}}</p>
               <!-- <br> -->
             </div>
@@ -101,9 +101,13 @@
         </div>
       </div>
     </div>
-    <div class="">
-      <img src="/static/images/logo_symbol.png" width="10%" alt="">
-      <img src="/static/images/Twitter_Logo.png" width="10%" alt="">
+
+    <div class="how_to_join">
+      <p>PiedPiper公式LINE、TwitterのDMにて受け付けております。</p>
+      <a href="https://lin.ee/gfGod6A"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加"
+          height="60" border="0"></a>
+      <a href="https://twitter.com/PiedPiper_AGU"><img src="/static/images/Twitter_Logo.png" width="120" alt=""></a>
+
     </div>
 
   </div>
@@ -122,8 +126,9 @@
       <p>piedpiper.aoyama@gmail.com</p>
       <p><a href="https://twitter.com/PiedPiper_AGU">Twitter</a></p>
       <p><a href="https://note.com/piedpiper_aoyama/n/ne40b6a301258">Note</a></p>
-      <p><a href="#">Instagram</a></p>
-      <p><a href="#">Facebook</a></p>
+      <p><a href="https://lin.ee/gfGod6A">LINE</a></p>
+      <!-- <p><a href="#">Instagram</a></p> -->
+      <!-- <p><a href="#">Facebook</a></p> -->
     </div>
 
     <div class="section__contact__form col-3 offset-2">
@@ -145,9 +150,5 @@
   </div>
 </div>
 
-<footer>
-  <p><small>&copy;2020青山学院大学PiedPiperプログラミング愛好会</small></p>
-  <!-- Noteへ -->
-  <!-- ツイッターへ -->
-</footer>
+
 {% endblock %}
