--- a/templates/test.html
+++ b/templates/test.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
 
-{% for a in note_list%}
-<p>{{a.body}}</p>
-{% endfor%}
+    {{name}}
 </body>
+
 </html>
